update admin UI with primeng

--- a/front-end-angular/src/app/components/admin/admin.component.html
+++ b/front-end-angular/src/app/components/admin/admin.component.html
@@ -1,15 +1,15 @@
-<app-navbar>
-    
-</app-navbar>
+
+<p-tabMenu [model]="services" [activeItem]="services[0]">
+</p-tabMenu>
 
 
-<div class="row">
+<!-- <div class="row">
 
     <button routerLink="./courses-list" routerLinkActive="active" >Courses</button>
     <button routerLink="./students-list" routerLinkActive="active">Student</button>
     <button routerLink="./instructors-list" routerLinkActive="active">Instructor</button>
 
-</div>
+</div> -->
 
 
 <router-outlet></router-outlet>
