--- a/front-end-angular/src/app/components/admin/course/course-student-add/course-student-add.component.html
+++ b/front-end-angular/src/app/components/admin/course/course-student-add/course-student-add.component.html
@@ -1,4 +1,4 @@
-<ul class="list-group">
+<!-- <ul class="list-group">
     <div *ngFor="let tempStudent of students">
       <li class="list-group-item">
         {{tempStudent.firstName}}
@@ -9,4 +9,24 @@
         
         </li>
     </div>
-  </ul>
+  </ul> -->
+
+  <p-dialog [(visible)]="studentDialog" [style]="{width: '450px'}" header="Students" [modal]="true"
+  styleClass="p-fluid">
+
+  <p-table [value]="students">
+    
+  
+    <ng-template pTemplate="body" let-student>
+      <tr>
+        <td>{{ student.firstName }} {{ student.lastName }} 
+        </td>
+        <td></td>
+        <td><button pButton pRipple icon="pi pi-plus" class="p-button-rounded mr-2" (click)="addStudentToCourse(student.id)"></button></td>
+      </tr>
+  
+    </ng-template>
+  </p-table>
+
+  
+</p-dialog>
