--- a/front-end-angular/src/app/components/admin/instructor/instructor-add/instructor-add.component.html
+++ b/front-end-angular/src/app/components/admin/instructor/instructor-add/instructor-add.component.html
@@ -1,13 +1,13 @@
-<form [formGroup]="addInstructor" (ngSubmit)="onAddingInstructor()">
-    
+<!-- <form [formGroup]="addInstructor" (ngSubmit)="onAddingInstructor()">
+
     <div>
 
         <input type="email" id="email" formControlName="email" placeholder="Instructor Email">
     </div>
     <div *ngIf="isClicked">
         <span
-    *ngIf="!addInstructor.get('email')?.valid && addInstructor.get('email')?.touched || addInstructor.get('email')?.value == null"
-    class="help-block">Please enter a valid email</span>
+            *ngIf="!addInstructor.get('email')?.valid && addInstructor.get('email')?.touched || addInstructor.get('email')?.value == null"
+            class="help-block">Please enter a valid email</span>
     </div>
     <br>
     <div>
@@ -16,32 +16,91 @@
     </div>
     <div *ngIf="isClicked">
         <span
-    *ngIf="!addInstructor.get('firstName')?.valid && addInstructor.get('firstName')?.touched || addInstructor.get('firstName')?.value == null"
-    class="help-block">Please enter a valid firstName</span>
+            *ngIf="!addInstructor.get('firstName')?.valid && addInstructor.get('firstName')?.touched || addInstructor.get('firstName')?.value == null"
+            class="help-block">Please enter a valid firstName</span>
     </div>
     <br>
     <div>
-        
+
         <input type="text" id="lastName" formControlName="lastName" placeholder="Last Name">
     </div>
     <div *ngIf="isClicked">
         <span
-    *ngIf="!addInstructor.get('lastName')?.valid && addInstructor.get('lastName')?.touched || addInstructor.get('lastName')?.value == null"
-    class="help-block">Please enter a valid lastName</span>
+            *ngIf="!addInstructor.get('lastName')?.valid && addInstructor.get('lastName')?.touched || addInstructor.get('lastName')?.value == null"
+            class="help-block">Please enter a valid lastName</span>
     </div>
     <br>
     <div>
-        
+
         <input type="password" id="password" formControlName="password" placeholder="Password">
     </div>
     <div *ngIf="isClicked">
         <span
-        *ngIf="!addInstructor.get('password')?.valid && addInstructor.get('password')?.touched || addInstructor.get('password')?.value == null"
-        class="help-block">Please enter a valid password</span>
+            *ngIf="!addInstructor.get('password')?.valid && addInstructor.get('password')?.touched || addInstructor.get('password')?.value == null"
+            class="help-block">Please enter a valid password</span>
     </div>
     <br>
-    
+
 
     <button (click)="isClicked = true" type="submit">Add Instructor</button>
 
-</form>
+</form> -->
+
+
+<p-dialog [(visible)]="instructorDialog" [style]="{width: '450px'}" header="Course Details" [modal]="true"
+    styleClass="p-fluid">
+
+
+    <form [formGroup]="addInstructor">
+
+        <div>
+
+            <input pInputText type="email" id="email" formControlName="email" placeholder="Instructor Email">
+        </div>
+        <div *ngIf="isClicked">
+            <span
+                *ngIf="!addInstructor.get('email')?.valid && addInstructor.get('email')?.touched || addInstructor.get('email')?.value == null"
+                class="help-block">Please enter a valid email</span>
+        </div>
+        <br>
+        <div>
+
+            <input pInputText type="text" id="firstName" formControlName="firstName" placeholder="First Name">
+        </div>
+        <div *ngIf="isClicked">
+            <span
+                *ngIf="!addInstructor.get('firstName')?.valid && addInstructor.get('firstName')?.touched || addInstructor.get('firstName')?.value == null"
+                class="help-block">Please enter a valid firstName</span>
+        </div>
+        <br>
+        <div>
+
+            <input pInputText type="text" id="lastName" formControlName="lastName" placeholder="Last Name">
+        </div>
+        <div *ngIf="isClicked">
+            <span
+                *ngIf="!addInstructor.get('lastName')?.valid && addInstructor.get('lastName')?.touched || addInstructor.get('lastName')?.value == null"
+                class="help-block">Please enter a valid lastName</span>
+        </div>
+        <br>
+        <div>
+
+            <input pInputText type="password" id="password" formControlName="password" placeholder="Password">
+        </div>
+        <div *ngIf="isClicked">
+            <span
+                *ngIf="!addInstructor.get('password')?.valid && addInstructor.get('password')?.touched || addInstructor.get('password')?.value == null"
+                class="help-block">Please enter a valid password</span>
+        </div>
+        <br>
+
+
+
+    </form>
+    <ng-template pTemplate="footer">
+        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
+        <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text"
+            (click)="onAddingInstructor()"></button>
+    </ng-template>
+
+</p-dialog>
