--- a/front-end-angular/src/app/components/admin/course/course-instructors-add/course-instructors-add.component.html
+++ b/front-end-angular/src/app/components/admin/course/course-instructors-add/course-instructors-add.component.html
@@ -1,12 +1,36 @@
-<ul class="list-group">
+<!-- <p-dialog [(visible)]="instructorDialog" [style]="{width: '450px'}" header="Course Details" [modal]="true"
+  styleClass="p-fluid">
+  <ul class="list-group">
     <div *ngFor="let tempInstructor of instructors">
       <li class="list-group-item">
         {{tempInstructor.firstName}}
         {{tempInstructor.lastName}}
+        <button pButton type="button" label="Add" class="p-button-text"></button>
 
-        <button mat-raised-button color="primary"
-        (click)="addInstructorToCourse(tempInstructor.id)">Add</button>
         
-        </li>
+
+
+      </li>
     </div>
   </ul>
+</p-dialog> -->
+
+<p-dialog [(visible)]="instructorDialog" [style]="{width: '450px'}" header="Instructors" [modal]="true"
+  styleClass="p-fluid">
+
+  <p-table [value]="instructors">
+    
+  
+    <ng-template pTemplate="body" let-instructor>
+      <tr>
+        <td>{{ instructor.firstName }} {{ instructor.lastName }} 
+        </td>
+        <td></td>
+        <td><button pButton pRipple icon="pi pi-plus" class="p-button-rounded mr-2" (click)="addInstructorToCourse(instructor.id)"></button></td>
+      </tr>
+  
+    </ng-template>
+  </p-table>
+
+  
+</p-dialog>
