--- a/front-end-angular/src/app/components/admin/instructor/instructor-list/instructor-list.component.html
+++ b/front-end-angular/src/app/components/admin/instructor/instructor-list/instructor-list.component.html
@@ -1,4 +1,4 @@
-<ul class="list-group">
+<!-- <ul class="list-group">
     <div *ngFor="let tempInstructor of instructors">
       <li class="list-group-item">
         {{tempInstructor.firstName}} {{tempInstructor.lastName}}
@@ -18,7 +18,6 @@
   <br>
 
 
-<!-- <button class="float-right" routerLink="course-add">Add</button> -->
 <button class="float-right" (click)="adding()">Add</button>
 
 <div *ngIf="isAdding">
@@ -34,4 +33,77 @@
   [password]="instructor.password"
   [courses]="instructor.courses"
   (editedStudentInfo)="updateEditedInstructor($event)"></app-admin-instructor-edit>
+</div> -->
+
+<p-toast></p-toast>
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
+
+<div class="card">
+  <p-toolbar styleClass="mb-4">
+    <ng-template pTemplate="left">
+      <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="addingInstructor()"></button>
+    </ng-template>
+    <ng-template pTemplate="right">
+      <button pButton pRipple label="Logout" class="p-button-danger mr-2" (click)="logout()"></button>
+    </ng-template>
+
+
+  </p-toolbar>
+
+  <p-table #dt [value]="instructors" [rows]="10" [paginator]="true" [globalFilterFields]="['firstName', 'lastName']"
+    responsiveLayout="scroll" [rowHover]="true" dataKey="id"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+
+    <ng-template pTemplate="caption">
+      <div class="flex align-items-center justify-content-between">
+        <h5 class="m-0">Instructors</h5>
+
+      </div>
+    </ng-template>
+
+    <ng-template pTemplate="header">
+      <tr>
+
+        <th>First Name
+        </th>
+        <th>Last Name
+        </th>
+        <th></th>
+
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-instructor>
+      <tr>
+
+        <td>{{ instructor.firstName }}</td>
+        <td>{{ instructor.lastName }}</td>
+        <td>
+          <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
+          (click)="editingInstructor(instructor)"></button>
+          <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
+          (click)="deleteInstructor(instructor)"></button>
+        </td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="summary">
+      <div class="flex align-items-center justify-content-between">
+        In total there are {{instructors ? instructors.length : 0 }} instructors.
+      </div>
+    </ng-template>
+
+  </p-table>
+
+
+</div>
+
+<div *ngIf="isAdding">
+  <app-admin-instructor-add [instructorDialog]="instructorDialog" (newInstructor)="updateAddedInstructors()">
+  </app-admin-instructor-add>
+</div>
+
+
+<div *ngIf="isEditing">
+  <app-admin-instructor-edit [instructorDialog]="instructorDialog" [instructor]="instructor" (editedInstructorInfo)="updateEditedInstructor($event)">
+  </app-admin-instructor-edit>
 </div>
