--- a/front-end-angular/src/app/components/admin/student/student-add/student-add.component.html
+++ b/front-end-angular/src/app/components/admin/student/student-add/student-add.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addStudent" (ngSubmit)="onAddingStudent()">
+<!-- <form [formGroup]="addStudent" (ngSubmit)="onAddingStudent()">
     <div>
         <input type="email" id="email" formControlName="email" placeholder="Student Email">
     </div>
@@ -45,4 +45,63 @@
 
     <button (click)="isClicked = true" type="submit">Add Student</button>
 
-</form>
+</form> -->
+
+
+<p-dialog [(visible)]="studentDialog" [style]="{width: '450px'}" header="Course Details" [modal]="true"
+    styleClass="p-fluid">
+
+
+    <form [formGroup]="addStudent">
+
+        <div>
+
+            <input pInputText type="email" id="email" formControlName="email" placeholder="Student Email">
+        </div>
+        <div *ngIf="isClicked">
+            <span
+                *ngIf="!addStudent.get('email')?.valid && addStudent.get('email')?.touched || addStudent.get('email')?.value == null"
+                class="help-block">Please enter a valid email</span>
+        </div>
+        <br>
+        <div>
+
+            <input pInputText type="text" id="firstName" formControlName="firstName" placeholder="First Name">
+        </div>
+        <div *ngIf="isClicked">
+            <span
+                *ngIf="!addStudent.get('firstName')?.valid && addStudent.get('firstName')?.touched || addStudent.get('firstName')?.value == null"
+                class="help-block">Please enter a valid firstName</span>
+        </div>
+        <br>
+        <div>
+
+            <input pInputText type="text" id="lastName" formControlName="lastName" placeholder="Last Name">
+        </div>
+        <div *ngIf="isClicked">
+            <span
+                *ngIf="!addStudent.get('lastName')?.valid && addStudent.get('lastName')?.touched || addStudent.get('lastName')?.value == null"
+                class="help-block">Please enter a valid lastName</span>
+        </div>
+        <br>
+        <div>
+
+            <input pInputText type="password" id="password" formControlName="password" placeholder="Password">
+        </div>
+        <div *ngIf="isClicked">
+            <span
+                *ngIf="!addStudent.get('password')?.valid && addStudent.get('password')?.touched || addStudent.get('password')?.value == null"
+                class="help-block">Please enter a valid password</span>
+        </div>
+        <br>
+
+
+
+    </form>
+    <ng-template pTemplate="footer">
+        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
+        <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text"
+            (click)="onAddingStudent()"></button>
+    </ng-template>
+
+</p-dialog>
